--- a/css/main.css
+++ b/css/main.css
@@ -14,15 +14,16 @@ h1 {
   font: 40px "Helvetica";
 }
 .keypad-buttons li {
+  cursor: pointer;
   border: solid 1px #999;
   border-radius: 5px;
   box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
   flex-shrink: 0;
   list-style: none;
   margin: 10px;
+  min-width: 60px;
   padding: 5px 10px;
   text-align: center;
-  width: 60px;
 }
 
 .maze {
