--- a/css/main.css
+++ b/css/main.css
@@ -7,23 +7,11 @@ h1 {
   font-weight: bold;
 }
 
-.keypad-buttons {
-  display: flex;
-  padding: 0;
-  flex-wrap: wrap;
+.keypad-buttons button {
+  margin: 5px;
   font: 40px "Helvetica";
-}
-.keypad-buttons li {
-  cursor: pointer;
-  border: solid 1px #999;
-  border-radius: 5px;
-  box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-  flex-shrink: 0;
-  list-style: none;
-  margin: 10px;
-  min-width: 60px;
-  padding: 5px 10px;
-  text-align: center;
+  min-height: 60px;
+  max-height: 60px;
 }
 
 .maze {
@@ -48,4 +36,12 @@ h1 {
 .label-spacing {
   margin-bottom: 2px;
   padding-bottom: 0;
+}
+
+.space-above {
+  margin-top: 25px;
+}
+
+.symbols-answer {
+  font: 40px "Helvetica";
 }
