--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@ h1 {
   font-weight: bold;
 }
 
+.knob-buttons button {
+  min-height: 40px;
+  min-width: 80px;
+}
+
 .keypad-buttons button {
   margin: 5px;
   font: 40px "Helvetica";
